@@ -4,6 +4,8 @@ val logback_version: String by project
 val prometheus_version: String by project
 val mockk_version: String by project
 val junit_platform_launcher_version: String by project
+val jedis_version: String by project
+val junit_pioneer_version: String by project
 
 plugins {
     kotlin("jvm") version "2.2.20"
@@ -45,10 +47,11 @@ dependencies {
     implementation("io.ktor:ktor-client-cio")
     implementation("io.ktor:ktor-client-content-negotiation")
     implementation("io.ktor:ktor-client-logging")
+    implementation("redis.clients:jedis:$jedis_version")
 
     testImplementation("io.ktor:ktor-server-test-host")
     testImplementation("org.jetbrains.kotlin:kotlin-test-junit5:$kotlin_version")
-
+    testImplementation("org.junit-pioneer:junit-pioneer:$junit_pioneer_version")
     testImplementation("io.mockk:mockk:$mockk_version")
     testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test")
     testImplementation("io.ktor:ktor-client-mock")
@@ -59,6 +62,13 @@ dependencies {
 tasks.test {
     useJUnitPlatform()
     finalizedBy(tasks.jacocoTestReport)
+    
+    // Allow reflection access to JVM internals.
+    // This is used to set environment variable during config utils testing.
+    jvmArgs(
+        "--add-opens", "java.base/java.util=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+        )
 }
 
 tasks.jacocoTestReport {
@@ -72,7 +82,8 @@ tasks.jacocoTestReport {
             classDirectories.files.map {
                 fileTree(it) {
                     exclude("**/integration/tmdb/TmdbClient.*",
-                        "**/di/AppModules.*"
+                        "**/di/AppModules.*",
+                        "**/di/modules/RedisModule.*"
                     )
                 }
             }
@@ -93,7 +104,7 @@ sonar {
         property("sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml")
         property(
             "sonar.coverage.exclusions",
-            "src/main/kotlin/integration/tmdb/TmdbClient.kt, src/main/kotlin/di/AppModules.kt"
+            "src/main/kotlin/integration/tmdb/TmdbClient.kt, src/main/kotlin/di/AppModules.kt, src/main/kotlin/di/modules/RedisModule.kt"
         )
     }
 }
